# audio-engine

./: .gitignore  CMakeLists.txt  README.md
src/: EffectChain.cpp  EffectChain.h  main.cpp
src/Effects/: EffectChain.h  Gain.h
src/app/: main.cpp
src/audio/: AudioBuffer.h  AudioEngine.cpp  AudioEngine.h  AudioProcessor.cpp  AudioProcessor.h  BlockUtils.cpp  BlockUtils.h
src/dsp/: CircularBuffer.cpp  CircularBuffer.h  Queue.cpp  Queue.h
src/effects/: Effect.h  EffectChain.cpp  EffectChain.h  Gain.cpp  Gain.h  STFTProcessor.cpp  STFTProcessor.h  ffDelay.cpp  ffDelay.h
src/io/: AudioFileIO.cpp  AudioFileIO.h
src/temp_effects/: Effect.h  EffectChain.cpp  Gain.cpp
src/tests/: EffectChainTest.cpp  ffDelayTest.cpp
